--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -197,6 +197,12 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#00AABB"
             android:text="STDA MANUAL" />
+        <Button
+            android:id="@+id/manual_openbabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00AABB"
+            android:text="OPENBABEL MANUAL" />
 
         <Button
             android:id="@+id/Graph"
